# DigitShowBasic

./: .env.example  .gitignore  AGENTS.md  DigitShowBasic.sln  DigitShowDST.vcxproj  DigitShowDST.vcxproj.filters  README.md  api_config.json  pyproject.toml  vcpkg.json
.github/: copilot-instructions.md
knowledge/: README.md  REST_API_ENHANCEMENTS.md  TESTING_GUIDE.md  YAML_SUPPORT.md  board_control_fifo_ownership.md  control_mechanisms_overview.md  control_parameter_inventory.md  control_specifications.md  control_workflow.schema.json  data_file_formats.md  doctest_integration.md  monotonic_clock_implementation.md  rest_api_quickstart.md  step_completion_safety_analysis_2026-01-01.md  timer_callback_vs_wmtimer.md  tsv_unix_time_migration.md  voltage_reset_on_exit.md
schemas/: api_config.schema.json  calibration_factor.schema.json  control_script.schema.json
scripts/: Load-DevEnv.ps1  README.md  analyze_displacement_velocity.py  examples.py  load_data.py  plot_data.py  plot_velocity_rpm.py  profile.ps1  run_config_tests.ps1  sample-viewer.html
src/: ApiServer.cpp  ApiServer.hpp  AppInfoDlg.cpp  AppInfoDlg.h  Board.hpp  CAIO.H  CalibrationAmp.cpp  CalibrationAmp.h  CalibrationFactor.cpp  CalibrationFactor.h  Constants.h  ControlConfig.cpp  ControlConfig.h  Control_CLoading.cpp  Control_CLoading.h  Control_Consolidation.cpp  Control_Consolidation.h  Control_File.cpp  Control_File.h  Control_ID.cpp  Control_ID.h  Control_LinearStressPath.cpp  Control_LinearStressPath.h  Control_MLoading.cpp  Control_MLoading.h  Control_PreConsolidation.cpp  Control_PreConsolidation.h  (+64 more)
(+42 files in other folders)
